update VSM with predicate

--- a/datasets/docs.ipynb
+++ b/datasets/docs.ipynb
@@ -170,33 +170,18 @@
     "df['runtime'].replace(to_replace=r'(\\d*) min', value=r'\\1', regex=True, inplace=True)\n",
     "df['genre'].replace(r',', '', regex=True, inplace=True)\n",
     "df['actors'] = df[['Star1', 'Star2', 'Star3', 'Star4']].apply(lambda x: ' '.join(x), axis=1)\n",
-    "df['id'] = df.index + 1\n",
     "\n",
     "# convert to target type\n",
     "df['runtime'] = df['runtime'].astype(int)\n",
     "df.drop(['Star1', 'Star2', 'Star3', 'Star4'], axis=1, inplace=True)\n",
     "\n",
     "# reorder columns\n",
-    "df = df[['id', 'title', 'year', 'runtime', 'rating', 'genre', 'actors', 'summary']]\n",
+    "df = df[['title', 'year', 'runtime', 'rating', 'genre', 'actors', 'summary']]\n",
     "\n",
     "# show result\n",
     "df.info()\n",
     "df.to_dict('records')[:3]\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
