--- a/embeddings/sentence-transformers.ipynb
+++ b/embeddings/sentence-transformers.ipynb
@@ -434,6 +434,131 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "X = np.array([[2, 3, 0], [1, 1, 0], [14, 0, 1]])\n",
+    "Y = np.array([[0, 1, 0], [0, 0, 1], [0, 0, 0]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 2,  2,  0],\n",
+       "       [ 1,  1, -1],\n",
+       "       [14,  0,  1]])"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X-Y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 2  2  0]\n",
+      " [ 1  1  1]\n",
+      " [14  0  1]]\n",
+      "[[1.29045465 1.29045465 0.        ]\n",
+      " [1.         1.         1.        ]\n",
+      " [2.6402007  0.         1.        ]]\n",
+      "[2.5809093 3.        3.6402007]\n",
+      "[13.16177198 19.81299075 33.51944226]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math \n",
+    "p = 1 / math.e\n",
+    "\n",
+    "\n",
+    "print(np.abs(X-Y))\n",
+    "print(np.power(np.abs(X-Y), p))\n",
+    "print(np.power(np.abs(X-Y), p).sum(axis=-1))\n",
+    "print(np.power(np.power(np.abs(X-Y), p).sum(axis=-1), 1/p))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sentence_transformers import SentenceTransformer, LoggingHandler, losses, models, util\n",
+    "\n",
+    "\n",
+    "losses.CosineSimilarityLoss\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[42.7925]],\n",
+       "\n",
+       "        [[57.8571]]])"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "\n",
+    "a = torch.tensor([[[0.9041,  0.0196]], [[2.9041,  0.0196]]])\n",
+    "b = torch.tensor([[[-2.1763, -0.4713]], [[-2.1763, -0.4713]]])\n",
+    "\n",
+    "torch.cdist(a, b, p=0.2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([42.7925, 57.8571])"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = torch.tensor([[0.9041,  0.0196], [2.9041,  0.0196]])\n",
+    "b = torch.tensor([[-2.1763, -0.4713], [-2.1763, -0.4713]])\n",
+    "(a-b).pow(0.2).sum(dim=1).pow(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
